# multiperiod-dispatch

./: .gitignore  CALIBRATION.md  README.md  multiperiod_dispatch.py  pyproject.toml
calibration/: measure.py  sweep_results.json
tests/: test_validation.py
